--- a/style.css
+++ b/style.css
@@ -190,7 +190,6 @@ body {
   top: 53px;
   left: 72px;
   border-radius: 30px;
-  cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -198,7 +197,39 @@ body {
   z-index: 2;
 }
 
-.slider .slider__inner .slider__iphone_main .slider__iphone_vertical_pic {
+.slider .slider__inner .slider__iphone_main .slider__iphone_vertical-home {
+  position: absolute;
+  top: 459px;
+  left: 158px;
+  content: '';
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  background-image: url('assets/img/slider/home.svg');
+  background-repeat: no-repeat;
+  cursor: pointer;
+  z-index: 4;
+}
+
+.slider
+  .slider__inner
+  .slider__iphone_main
+  .slider__iphone_vertical-home:hover {
+  -webkit-box-shadow: 0px 0px 5px rgba(154, 147, 140, 0.5);
+  box-shadow: 0px 0px 5px rgba(154, 147, 140, 0.5);
+}
+
+.slider
+  .slider__inner
+  .slider__iphone_main
+  .slider__iphone_vertical-home:active {
+  -webkit-box-shadow: inset 0px 0px 5px rgba(154, 147, 140, 0.5);
+  box-shadow: inset 0px 0px 5px rgba(154, 147, 140, 0.5);
+  -webkit-transform: scale(0.95);
+  transform: scale(0.95);
+}
+
+.slider .slider__inner .slider__iphone_main .slider__iphone_vertical-pic {
   position: absolute;
   top: 118px;
   left: 86px;
@@ -211,18 +242,18 @@ body {
   background-size: inherit;
   background-position: -14px -135px;
   opacity: 1;
-  -webkit-transition: opacity 0.5s linear;
-  transition: opacity 0.5s linear;
+  -webkit-transition: opacity 0.3s linear;
+  transition: opacity 0.3s linear;
   z-index: 3;
 }
 
-.slider .slider__inner .slider__iphone_main .switcher {
+.slider .slider__inner .slider__iphone_main .switch {
   opacity: 0;
-  -webkit-transition: opacity 0.5s linear;
-  transition: opacity 0.5s linear;
+  -webkit-transition: opacity 0.3s linear;
+  transition: opacity 0.3s linear;
 }
 
-.slider .slider__inner .slider__iphone_main .slider__iphone_vertical_shadow {
+.slider .slider__inner .slider__iphone_main .slider__iphone_vertical-shadow {
   position: absolute;
   top: 53px;
   left: 72px;
@@ -240,7 +271,6 @@ body {
   top: 174px;
   right: 97px;
   border-radius: 30px;
-  cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -248,7 +278,39 @@ body {
   z-index: 2;
 }
 
-.slider .slider__inner .slider__iphone_main .slider__iphone_horizontal_pic {
+.slider .slider__inner .slider__iphone_main .slider__iphone_horizontal-home {
+  position: absolute;
+  top: 260px;
+  right: 504px;
+  content: '';
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  background-image: url('assets/img/slider/home.svg');
+  background-repeat: no-repeat;
+  cursor: pointer;
+  z-index: 4;
+}
+
+.slider
+  .slider__inner
+  .slider__iphone_main
+  .slider__iphone_horizontal-home:hover {
+  -webkit-box-shadow: 0px 0px 5px rgba(154, 147, 140, 0.5);
+  box-shadow: 0px 0px 5px rgba(154, 147, 140, 0.5);
+}
+
+.slider
+  .slider__inner
+  .slider__iphone_main
+  .slider__iphone_horizontal-home:active {
+  -webkit-box-shadow: inset 0px 0px 5px rgba(154, 147, 140, 0.5);
+  box-shadow: inset 0px 0px 5px rgba(154, 147, 140, 0.5);
+  -webkit-transform: scale(0.95);
+  transform: scale(0.95);
+}
+
+.slider .slider__inner .slider__iphone_main .slider__iphone_horizontal-pic {
   position: absolute;
   top: 188px;
   right: 162px;
@@ -260,18 +322,18 @@ body {
   background-size: inherit;
   background-position: -125px -119px;
   opacity: 1;
-  -webkit-transition: opacity 0.5s linear;
-  transition: opacity 0.5s linear;
+  -webkit-transition: opacity 0.3s linear;
+  transition: opacity 0.3s linear;
   z-index: 3;
 }
 
 .slider .slider__inner .slider__iphone_main .switch {
   opacity: 0;
-  -webkit-transition: opacity 0.5s linear;
-  transition: opacity 0.5s linear;
+  -webkit-transition: opacity 0.3s linear;
+  transition: opacity 0.3s linear;
 }
 
-.slider .slider__inner .slider__iphone_main .slider__iphone_horizontal_shadow {
+.slider .slider__inner .slider__iphone_main .slider__iphone_horizontal-shadow {
   position: absolute;
   top: 174px;
   right: 71px;
@@ -292,14 +354,45 @@ body {
   position: absolute;
   top: 43px;
   left: 252px;
-  cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
 }
 
-.slider .slider__inner .slider__iphone_middle .slider__iphone_middle_pic {
+.slider .slider__inner .slider__iphone_middle .slider__iphone_middle-home {
+  position: absolute;
+  top: 476px;
+  left: 475px;
+  content: '';
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background-image: url('assets/img/slider/home-middle.svg');
+  background-repeat: no-repeat;
+  cursor: pointer;
+  z-index: 4;
+}
+
+.slider
+  .slider__inner
+  .slider__iphone_middle
+  .slider__iphone_middle-home:hover {
+  -webkit-box-shadow: 0px 0px 5px rgba(154, 147, 140, 0.5);
+  box-shadow: 0px 0px 5px rgba(154, 147, 140, 0.5);
+}
+
+.slider
+  .slider__inner
+  .slider__iphone_middle
+  .slider__iphone_middle-home:active {
+  -webkit-box-shadow: inset 0px 0px 5px rgba(154, 147, 140, 0.5);
+  box-shadow: inset 0px 0px 5px rgba(154, 147, 140, 0.5);
+  -webkit-transform: scale(0.95);
+  transform: scale(0.95);
+}
+
+.slider .slider__inner .slider__iphone_middle .slider__iphone_middle-pic {
   position: absolute;
   top: 112px;
   left: 398px;
@@ -309,14 +402,14 @@ body {
   background-color: #000000;
   background-image: url('assets/img/slider/iphone-middle-pic.png');
   opacity: 1;
-  -webkit-transition: opacity 0.5s linear;
-  transition: opacity 0.5s linear;
+  -webkit-transition: opacity 0.3s linear;
+  transition: opacity 0.3s linear;
 }
 
 .slider .slider__inner .slider__iphone_middle .switch {
   opacity: 0;
-  -webkit-transition: opacity 0.5s linear;
-  transition: opacity 0.5s linear;
+  -webkit-transition: opacity 0.3s linear;
+  transition: opacity 0.3s linear;
 }
 
 .slider .slider__inner .slider__next {
