--- a/style.css
+++ b/style.css
@@ -55,7 +55,11 @@ body {
   z-index: 999;
 }
 
-.header .header__inner {
+.header .home {
+  scroll-margin-top: 50px;
+}
+
+.header .home .header__inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -64,7 +68,7 @@ body {
   justify-content: space-between;
 }
 
-.header .header__inner .header__logo {
+.header .home .header__inner .header__logo {
   font-size: 2.5rem;
   font-weight: 500;
   line-height: 1;
@@ -74,11 +78,11 @@ body {
   cursor: pointer;
 }
 
-.header .header__inner .header__logo span {
+.header .home .header__inner .header__logo span {
   color: #f06c64;
 }
 
-.header .header__inner .header__menu ul {
+.header .home .header__inner .header__menu ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -89,17 +93,17 @@ body {
   list-style-type: none;
 }
 
-.header .header__inner .header__menu ul li {
+.header .home .header__inner .header__menu ul li {
   position: relative;
   margin-right: 29px;
   margin-top: 10px;
 }
 
-.header .header__inner .header__menu ul li:last-child {
+.header .home .header__inner .header__menu ul li:last-child {
   margin-right: 0;
 }
 
-.header .header__inner .header__menu ul li:not(:last-child):after {
+.header .home .header__inner .header__menu ul li:not(:last-child):after {
   content: '';
   position: absolute;
   top: 50%;
@@ -112,19 +116,19 @@ body {
   border-radius: 50%;
 }
 
-.header .header__inner .header__menu ul li a {
+.header .home .header__inner .header__menu ul li a {
   font-weight: 500;
   color: #ffffff;
   -webkit-transition: color 0.3s linear;
   transition: color 0.3s linear;
 }
 
-.header .header__inner .header__menu ul li a:hover {
+.header .home .header__inner .header__menu ul li a:hover {
   color: #f06c64;
   text-decoration: underline;
 }
 
-.header .header__inner .header__menu ul li a.menu-active {
+.header .home .header__inner .header__menu ul li a.menu-active {
   color: #f06c64;
   text-decoration: underline;
 }
@@ -136,8 +140,8 @@ body {
 } */
 .slider {
   height: 600px;
-  width: 100%;
-  min-width: 940px;
+  /*   width: 100%;
+  min-width: 940px; */
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
   -webkit-transition: all 0.5s ease-in-out;
@@ -596,10 +600,14 @@ body {
   width: 313px;
   max-width: 300px;
   max-height: 90px;
+  /*           margin-right: 20px; */
   margin-bottom: 33px;
   line-height: 23px;
   padding-left: 80px;
   overflow: hidden;
+  /*           &:nth-child(3n) {
+            margin-right: 0;
+          } */
 }
 
 .services .services__inner .services__list ul li h3 {
@@ -1502,6 +1510,33 @@ body {
   fill: #666d89;
   -webkit-transition: fill 0.2s linear;
   transition: fill 0.2s linear;
+}
+
+@media (max-width: 768px) {
+  .portfolio .portfolio__inner .portfolio__images ul li {
+    -ms-flex-preferred-size: 25%;
+    flex-basis: 25%;
+  }
+  .portfolio .portfolio__inner .portfolio__images ul li:nth-child(4n + 1) {
+    margin-left: 10px;
+  }
+  .portfolio .portfolio__inner .portfolio__images ul li:nth-child(4n) {
+    margin-right: 10px;
+  }
+  .portfolio .portfolio__inner .portfolio__images ul li:nth-child(3n + 1) {
+    margin-left: 0;
+  }
+  .portfolio .portfolio__inner .portfolio__images ul li:nth-child(3n) {
+    margin-right: 0;
+  }
+  .services .services__inner .services__list ul {
+    -webkit-box-pack: safe left;
+    -ms-flex-pack: safe left;
+    justify-content: safe left;
+  }
+  .services .services__inner .services__list ul li:nth-child(2n + 1) {
+    margin-right: 54px;
+  }
 }
 
 @-moz-document url-prefix() {
